# clock_monsieur

./: .gitignore  CMakeLists.txt  sdkconfig  tlc5948_fcntl.xlsx
firmware/: .gitignore  CMakeLists.txt  esp_hello_world.code-workspace  sdkconfig  todo.txt
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_blufi.cpp  app_blufi.h  button.cpp  button.h  check_err.h  display.cpp  display.h  gpio_defs.h  high_side.h  i2c_task.cpp  i2c_task.h  lux.cpp  lux.h  main.cpp  provisioning.cpp  provisioning.h  types.h  util.h  wifi.cpp  wifi.h
main/: CMakeLists.txt  display.cpp  display.h  gpio_defs.h  high_side.cpp  i2c_task.cpp  i2c_task.h  main.cpp  mcp_4017.cpp  mcp_4017.h  tlc_5948.cpp  tlc_5948.h  veml_3235.cpp  veml_3235.h
pcb/: .gitignore  circuitjs-20251025-003953.txt  circuitjs-20251026-235829.txt  clock_led.BomDoc  clock_led.OutJob  clock_led.PrjPcb  clock_led.PrjPcbStructure  clock_led.PvLib  clock_led.RUL  clock_led.SchDoc  clock_led.SchLib  clock_led_dual_switch.SchDoc  clock_led_face.SchDoc  clock_led_switches.SchDoc
pcb/Outputs/2025-10-31/: Bill of Materials-clock_led.xlsx  Pick Place for clock_led.csv  Status Report.Txt  clock_led-macro.APR_LIB  clock_led.EXTREP  clock_led.REP  clock_led.apr  clock_led_Board.gbr  clock_led_Copper_Signal_1.gbr  clock_led_Copper_Signal_2.gbr  clock_led_Copper_Signal_Bot.gbr  clock_led_Copper_Signal_Top.gbr  clock_led_Keep-out.gbr  clock_led_Legend_Bot.gbr  clock_led_Legend_Top.gbr  clock_led_NPTH_Drill.gbr  clock_led_PTH_Drill.gbr  clock_led_Pads_Bot.gbr  clock_led_Pads_Top.gbr  clock_led_Paste_Bot.gbr  clock_led_Paste_Top.gbr  clock_led_Profile.gbr  clock_led_Soldermask_Bot.gbr  clock_led_Soldermask_Top.gbr
pcb/Outputs/2025-11-01/: Bill of Materials-clock_led.xlsx  Pick Place for clock_led.csv  Status Report.Txt  clock_led-macro.APR_LIB  clock_led.EXTREP  clock_led.REP  clock_led.apr  clock_led_Board.gbr  clock_led_Copper_Signal_1.gbr  clock_led_Copper_Signal_2.gbr  (+14 more)
pcb/Project Outputs for clock_led/: Design Rule Check - clock_led.drc
