idf_component_register(
    SRCS
        main.cpp
        display.cpp
        lux.cpp
        wifi.cpp
        button.cpp
        app_blufi.cpp
    INCLUDE_DIRS
        .
)
target_compile_options(
    ${COMPONENT_LIB}
    PRIVATE
        -Wno-missing-field-initializers
        -Wno-unused-variable)
