idf_component_register(
    SRCS
        main.cpp
        display.cpp
        lux.cpp
        button.cpp
        provisioning.cpp
    PRIV_REQUIRES
        driver
        bt
        nvs_flash
        mbedtls
        wifi_provisioning
    INCLUDE_DIRS
        .
)
target_compile_options(
    ${COMPONENT_LIB}
    PRIVATE
        -Wno-missing-field-initializers
        -Wno-unused-variable)
